further improve the JNA code... also handle exceptions that occurr during synchronous ping correctly